Add final changes to all HTML files

--- a/index.html
+++ b/index.html
@@ -1410,9 +1410,9 @@
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
   &lt;div class="unit [ xs-1 ] island">
-    &lt;h3 class="push-0 zetta bold">Item Name&lt;/h3>
-    &lt;span class="push-1-2 italic">$$$$&lt;/span>
-    &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
+    &lt;h3 class="push-0 bold">Item Name&lt;/h3>
+    &lt;span class="push">$$$$&lt;/span>
+    &lt;p class="pad-t-1-4 push-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
     &lt;a class="btn btn-save">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
     &lt;a class="btn btn-cart push-r-2">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
@@ -1615,24 +1615,23 @@
           &lt;li>&lt;a class="link-box" href="#">Make a Review&lt;/a>&lt;/li>
         &lt;/ul>
       &lt;/div>
-        &lt;h3 class="pad-t-1-2 peta push-1-2">$$$$&lt;/h3>
-      &lt;dl class="list-group-inline">
-        &lt;dt class="milli push-0">Brand:&lt;/dt>
-        &lt;dd class="milli push-0">Rubikas&lt;/dd>
-        &lt;dt class="milli push-0">Product Number:&lt;/dt>
-        &lt;dd class="milli push-0">00000000000&lt;/dd>
-        &lt;dt class="milli push-0">Availability:&lt;/dt>
-        &lt;dd class="milli push-0">In Stock&lt;/dd>
-        &lt;dt class="milli push-0">Accessibility:&lt;/dt>
-        &lt;dd class="milli push-0">Colour Blind Friendly.&lt;br> Unavailable to the Blind.&lt;/dd>
-      &lt;/dl>
-      &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
-      &lt;div class="push-2">
-        &lt;a class="btn btn-small btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
-        &lt;a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
-      &lt;/div>
-      &lt;/h3>
-    &lt;/div>
+        &lt;span class="pad-t-1-2push-1-2">$$$$&lt;/span>
+        &lt;dl class="list-group-inline">
+          &lt;dt class="milli push-0">Brand:&lt;/dt>
+          &lt;dd class="milli push-0">Rubikas&lt;/dd>
+          &lt;dt class="milli push-0">Product Number:&lt;/dt>
+          &lt;dd class="milli push-0">00000000000&lt;/dd>
+          &lt;dt class="milli push-0">Availability:&lt;/dt>
+          &lt;dd class="milli push-0">In Stock&lt;/dd>
+          &lt;dt class="milli push-0">Accessibility:&lt;/dt>
+          &lt;dd class="milli push-0">Colour Blind Friendly.&lt;br> Unavailable to the Blind.&lt;/dd>
+        &lt;/dl>
+        &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
+        &lt;div class="push-2">
+          &lt;a class="btn btn-small btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
+          &lt;a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
+        &lt;/div>
+      &lt;/h3>&lt;/div>
 
   &lt;/div>
 &lt;/div>
