--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Rubikas | Product Page</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="img/ico" href="../images/favicon.ico">
   <script src="../common/patternbot.js"></script>
 </head>
 <body>
@@ -12,13 +13,15 @@
 
   <script type="application/json" data-pattern="header/header"></script>
 
-  <script type="application/json" data-pattern="banner/home-banner">{
-    ".home-text-image-banner[class]": "home-text-image-banner banner-img-2 embed embed-16by9",
-    "h1": "Filtering your Rubik",
-    "p": "Pick and choose your rubik of choice. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-  }</script>
+  <script type="application/json" data-pattern="banner/home-banner">
+    {
+      ".home-text-image-banner[class]": "home-text-image-banner banner-img-2 embed embed-16by9",
+      "h1": "Filtering your Rubik",
+      "p": "Here you will be able to pick and choose your rubik of choice, you will find everything you need to find the right Rubik for you. If you wish to make your searching easier don't hesitate to use our filter! It'll make finding the best match for you. Happy Browsing!"
+    }
+  </script>
 
-  <main class="pad-t-2 pad-b-2"  id="main" role="main" tabindex="0">
+  <main class="pad-t-2 pad-b-2" id="main" role="main" tabindex="0">
     <div class="grid island">
       <div class="unit unit-push-xl-1-4 l-1 xl-3-4 push-2">
 
@@ -26,40 +29,123 @@
 
         <div class="grid pad-b-2 pad-t-2">
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "h3": "Collection",
+                "span": "$142",
+                "p": "Colour Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/three-by-three-by-three.jpg",
+                "h3": "3by3by3",
+                "span": "$32",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/octahedral-prism.jpg",
+                "h3": "Octahedral",
+                "span": "$28",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/jigsaw-plain.jpg",
+                "h3": "200 Pieces Jigsaw",
+                "span": "$18",
+                "p": "Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/pyramid-rubik.jpg",
+                "h3": "Pyramid",
+                "span": "$28",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/jigsaw-two.jpg",
+                "h3": "10,000 Pieces Jigsaw",
+                "span": "$18",
+                "p": "Colour Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/two-by-two-by-two.jpg",
+                "h3": "2by2by2 Tower Collection",
+                "span": "$68",
+                "p": "Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/multiple-rubik.jpg",
+                "h3": "Rubik Combo",
+                "span": "$120",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/rubiks.jpg",
+                "h3": "Rubik Combo",
+                "span": "$120",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/chess-pieces.jpg",
+                "h3": "Chess",
+                "span": "$24",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/rubik-two-by-two.jpg",
+                "h3": "2by2by2",
+                "span": "$120",
+                "p": "Colour Blind and Blind friendly"
+              }
+            </script>
           </div>
           <div class="unit s-1 m-1-2 l-1-3">
-            <script type="application/json" data-pattern="card/basic-card"></script>
+            <script type="application/json" data-pattern="card/basic-card">
+              {
+                "img[src]": "../images/checkers-product.jpg",
+                "h3": "Checkers",
+                "span": "$52",
+                "p": "Colour Blind friendly"
+              }
+            </script>
           </div>
         </div>
         <script type="application/json" data-pattern="navigation/page-navigation"></script>
