--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -77,7 +77,7 @@
           <li><a class="link-box" href="#">Make a Review</a></li>
         </ul>
       </div>
-        <h3 class="pad-t-1-2 peta push-1-2">$$$$</h3>
+        <span class="pad-t-1-2push-1-2">$$$$</span>
         <dl class="list-group-inline">
           <dt class="milli push-0">Brand:</dt>
           <dd class="milli push-0">Rubikas</dd>
