--- a/pages/home.html
+++ b/pages/home.html
@@ -21,7 +21,7 @@
     }
   </script>
 
-  <main class="pad-t-2 pad-b-2 cart-checkout" id="main" role="main" tabindex="0">
+  <main class="pad-t-2 pad-b-2 home-background-neutral" id="main" role="main" tabindex="0">
     <div class="grid grid-stretch island-2">
       <div class="unit [ xs-1 l-1-2 xl-1-4 ] unit-content-distribute pad-t pad-b">
         <script type="application/json" data-pattern="card/info-card">
