--- a/patterns/buttons/buttons-filter.html
+++ b/patterns/buttons/buttons-filter.html
@@ -15,7 +15,7 @@
 <body>
  <div class="pad-t">
    <button type="submit" name="button">
-     <a class="btn btn-submit pad-t"><span aria-label="Submit">Submit<i></i></span></a>
+     <a class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></a>
    </button>
  </div>
 
