--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -21,6 +21,10 @@
    <button type="submit" name="button">
      <a class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></a>
    </button>
+
+   <button type="submit" name="button">
+     <a class="btn btn-submit pad-t"><span aria-label="Submit">Submit<i></i></span></a>
+   </button>
  </div>
 
 
