Fix issues with patterns

--- a/patterns/buttons/buttons-filter.html
+++ b/patterns/buttons/buttons-filter.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons Submit</title>
+  <title>Buttons Filter</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,9 +14,7 @@
 </head>
 <body>
  <div class="pad-t">
-   <button type="submit" name="button">
-     <a class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></a>
-   </button>
+   <button type="submit" name="button" class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></button>
  </div>
 
 
