--- a/patterns/buttons/buttons-submit.html
+++ b/patterns/buttons/buttons-submit.html
@@ -14,9 +14,7 @@
 </head>
 <body>
  <div class="pad-t">
-   <button type="submit" name="button">
-     <a class="btn btn-submit pad-t"><span aria-label="Submit">Submit<i></i></span></a>
-   </button>
+   <button type="submit" name="button" class="btn btn-submit pad-t"><span aria-label="Submit">Submit<i></i></span></button>
  </div>
 
 
