--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -17,7 +17,7 @@
   <div class="main-card">
     <div class="grid gutter-1-2 pad-t-1-2">
 
-      <div class="unit [ xs-1 s-1 l-1-4] ">
+      <div class="unit [ xs-1 s-1-2] ">
         <ul class="grid list-group relative gutter-2">
 
           <li class="unit [ s-1 ] relative img-display-main">
@@ -55,12 +55,12 @@
       </ul>
     </div>
 
-    <div class="unit [ xs-1 s-1 l-3-4] gutter pad-t-1-2">
-      <h3 class="info-item push-1-2 zetta">Item Name</p>
-      <div class="info-container pad-t-1-4 pad-b-1-4">
+    <div class="unit [ xs-1 s-1-2 ] gutter">
+      <h3 class="info-item push-1-2 zetta">Item Name</h3>
+      <div class="info-container">
         <ul class="list-group-inline push-0">
 
-          <li>
+          <li class="cards">
             <input type="radio" id="rating-one" name="rating">
             <input type="radio" id="rating-two" name="rating">
             <input type="radio" id="rating-three" name="rating">
@@ -73,25 +73,25 @@
             <label for="rating-five"></label>
           </li>
 
-          <li><a class="link-box" href="#">7 reviews</a></li> <b class="separator">|</b>
-          <li><a class="link-box" href="#">Make a Review</a></li>
+          <li><a class="link-box mega" href="#">7 reviews</a></li> <b class="separator">|</b>
+          <li><a class="link-box mega" href="#">Make a Review</a></li>
         </ul>
       </div>
-        <span class="pad-t-1-2push-1-2">$$$$</span>
+        <span class="pad-t block push-1-2">$$$$</span>
         <dl class="list-group-inline">
-          <dt class="milli push-0">Brand:</dt>
-          <dd class="milli push-0">Rubikas</dd>
-          <dt class="milli push-0">Product Number:</dt>
-          <dd class="milli push-0">00000000000</dd>
-          <dt class="milli push-0">Availability:</dt>
-          <dd class="milli push-0">In Stock</dd>
-          <dt class="milli push-0">Accessibility:</dt>
-          <dd class="milli push-0">Colour Blind Friendly.<br> Unavailable to the Blind.</dd>
+          <dt class="push-0">Brand:</dt>
+          <dd class="push-0">Rubikas</dd>
+          <dt class="push-0">Product Number:</dt>
+          <dd class="push-0">00000000000</dd>
+          <dt class="push-0">Availability:</dt>
+          <dd class="push-0">In Stock</dd>
+          <dt class="push-0">Accessibility:</dt>
+          <dd class="push-0">Colour Blind Friendly.<br> Unavailable to the Blind.</dd>
         </dl>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="push-2">
-          <a class="btn btn-small btn-save btn-small-flip pad-t"><span aria-label="Save">Save<i></i></span></a>
-          <a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
+          <a class="btn btn-save"><span aria-label="Save">Save<i></i></span></a>
+          <a class="btn btn-cart push-r-2"><span aria-label="Cart">Cart<i></i></span></a>
         </div>
       </div>
 
