--- a/patterns/card/popular-sell.html
+++ b/patterns/card/popular-sell.html
@@ -21,8 +21,8 @@
       <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="image-of-our-different-variety-of-rubik-product">
     </div>
     <div class="unit [ xs-1 s-2-3 m-3-4 l-3-4] gutter">
-      <h3 class="h3-separator pad-b-1-2">NEW Releases</h3>
-      <p class="push-1-2">$$$$</p>
+      <h3 class="h3-separator push-1-2">NEW Releases</h3>
+      <span class="push-1-2 block push">$$$$</span>
       <a class="btn btn-small"><span aria-label="More">More<i></i></span></a>
       <a class="btn btn-small btn-save btn-small-flip pad-t"><span aria-label="Save">Save<i></i></span></a>
     </div>
