--- a/index.html
+++ b/index.html
@@ -1245,9 +1245,7 @@
                 </i>
               </button>
               <code><pre id="buttons-buttons-filter-code-sample-copy-chunk">&lt;div class="pad-t"&gt;
-  &lt;button type="submit" name="button">
-    &lt;a class="btn btn-filter pad-t">&lt;span aria-label="Filter">filter&lt;i>&lt;/i>&lt;/span>&lt;/a>
-  &lt;/button>
+  &lt;button type="submit" name="button" class="btn btn-filter pad-t">&lt;span aria-label="Filter">filter&lt;i>&lt;/i>&lt;/span>&lt;/button>
 &lt;/div>
 </pre></code>
             </div>
@@ -1310,9 +1308,7 @@
                 </i>
               </button>
               <code><pre id="buttons-buttons-submit-code-sample-copy-chunk">&lt;div class="pad-t"&gt;
-  &lt;button type="submit" name="button">
-    &lt;a class="btn btn-submit pad-t">&lt;span aria-label="Submit">Submit&lt;i>&lt;/i>&lt;/span>&lt;/a>
-  &lt;/button>
+  &lt;button type="submit" name="button" class="btn btn-submit pad-t">&lt;span aria-label="Submit">Submit&lt;i>&lt;/i>&lt;/span>&lt;/button>
 &lt;/div>
 </pre></code>
             </div>
@@ -1380,11 +1376,10 @@
   &lt;a class="btn btn-cart push-r-2 pad-t">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;a class="btn btn-drop pad-t">&lt;span aria-label="Drop">drop&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;button type="submit" name="button">
-    &lt;a class="btn btn-filter pad-t">&lt;span aria-label="Filter">filter&lt;i>&lt;/i>&lt;/span>&lt;/a>
-  &lt;/button>
-
-  &lt;button type="submit" name="button">
     &lt;a class="btn btn-submit pad-t">&lt;span aria-label="Submit">Submit&lt;i>&lt;/i>&lt;/span>&lt;/a>
+  &lt;/button>
+  &lt;button type="submit" name="button">
+    &lt;a class="btn btn-filter pad-t">&lt;span aria-label="Filter">filter&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/button>
 &lt;/div>
 </pre></code>
@@ -1475,14 +1470,14 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t pad-b content-fill"&gt;
+              <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card content-fill pad-b-1-2"&gt;
   &lt;div class="unit [ xs-1 ] push">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
-  &lt;div class="unit [ xs-1 ] island">
+  &lt;div class="unit [ xs-1 ] gutter">
     &lt;h3 class="push-0 bold">Item Name&lt;/h3>
     &lt;span class="push">$$$$&lt;/span>
-    &lt;p class="pad-t-1-4 push-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
+    &lt;p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
     &lt;a class="btn btn-save">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
     &lt;a class="btn btn-cart push-r-2">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
@@ -1547,14 +1542,14 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="cart-item main-card gutter-1-2 pad-t-1-2 pad-b grid"&gt;
+              <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="cart-item main-card grid"&gt;
   &lt;div class="push unit xs-1 m-1-2">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
   &lt;/div>
-  &lt;div class="gutter pad-b unit xs-1 m-1-2">
-    &lt;h3 class="pad-b-1-2 push-1-2">Item Name&lt;/h3>
-    &lt;span class="push-1-2 block">$$$$&lt;/span>
-    &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
+  &lt;div class="gutter pad-t unit xs-1 m-1-2">
+    &lt;h3 class="push-1-4">Item Name&lt;/h3>
+    &lt;span class="push-1-8 block">$$$$&lt;/span>
+    &lt;p class="push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
     &lt;a class="btn btn-drop pad-t">&lt;span aria-label="Drop">drop&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
 &lt;/div>
@@ -1625,7 +1620,7 @@
               <code><pre id="card-icon-card-code-sample-copy-chunk">&lt;div class="main-card"&gt;
   &lt;div class="grid gutter-1-2 pad-t-1-2">
 
-    &lt;div class="unit [ xs-1 s-1 l-1-4] ">
+    &lt;div class="unit [ xs-1 s-1-2] ">
       &lt;ul class="grid list-group relative gutter-2">
 
         &lt;li class="unit [ s-1 ] relative img-display-main">
@@ -1663,12 +1658,12 @@
       &lt;/ul>
     &lt;/div>
 
-    &lt;div class="unit [ xs-1 s-1 l-3-4] gutter pad-t-1-2">
-      &lt;h3 class="info-item push-1-2 zetta">Item Name&lt;p>&lt;/p>
-      &lt;div class="info-container pad-t-1-4 pad-b-1-4">
+    &lt;div class="unit [ xs-1 s-1-2 ] gutter">
+      &lt;h3 class="info-item push-1-2 zetta">Item Name&lt;/h3>
+      &lt;div class="info-container">
         &lt;ul class="list-group-inline push-0">
 
-          &lt;li>
+          &lt;li class="cards">
             &lt;input type="radio" id="rating-one" name="rating">
             &lt;input type="radio" id="rating-two" name="rating">
             &lt;input type="radio" id="rating-three" name="rating">
@@ -1681,27 +1676,27 @@
             &lt;label for="rating-five">&lt;/label>
           &lt;/li>
 
-          &lt;li>&lt;a class="link-box" href="#">7 reviews&lt;/a>&lt;/li> &lt;b class="separator">|&lt;/b>
-          &lt;li>&lt;a class="link-box" href="#">Make a Review&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box mega" href="#">7 reviews&lt;/a>&lt;/li> &lt;b class="separator">|&lt;/b>
+          &lt;li>&lt;a class="link-box mega" href="#">Make a Review&lt;/a>&lt;/li>
         &lt;/ul>
       &lt;/div>
-        &lt;span class="pad-t-1-2push-1-2">$$$$&lt;/span>
-        &lt;dl class="list-group-inline">
-          &lt;dt class="milli push-0">Brand:&lt;/dt>
-          &lt;dd class="milli push-0">Rubikas&lt;/dd>
-          &lt;dt class="milli push-0">Product Number:&lt;/dt>
-          &lt;dd class="milli push-0">00000000000&lt;/dd>
-          &lt;dt class="milli push-0">Availability:&lt;/dt>
-          &lt;dd class="milli push-0">In Stock&lt;/dd>
-          &lt;dt class="milli push-0">Accessibility:&lt;/dt>
-          &lt;dd class="milli push-0">Colour Blind Friendly.&lt;br> Unavailable to the Blind.&lt;/dd>
-        &lt;/dl>
-        &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
-        &lt;div class="push-2">
-          &lt;a class="btn btn-small btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
-          &lt;a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
-        &lt;/div>
-      &lt;/h3>&lt;/div>
+      &lt;span class="pad-t block push-1-2">$$$$&lt;/span>
+      &lt;dl class="list-group-inline">
+        &lt;dt class="push-0">Brand:&lt;/dt>
+        &lt;dd class="push-0">Rubikas&lt;/dd>
+        &lt;dt class="push-0">Product Number:&lt;/dt>
+        &lt;dd class="push-0">00000000000&lt;/dd>
+        &lt;dt class="push-0">Availability:&lt;/dt>
+        &lt;dd class="push-0">In Stock&lt;/dd>
+        &lt;dt class="push-0">Accessibility:&lt;/dt>
+        &lt;dd class="push-0">Colour Blind Friendly.&lt;br> Unavailable to the Blind.&lt;/dd>
+      &lt;/dl>
+      &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
+      &lt;div class="push-2">
+        &lt;a class="btn btn-save">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
+        &lt;a class="btn btn-cart push-r-2">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
+      &lt;/div>
+    &lt;/div>
 
   &lt;/div>
 &lt;/div>
@@ -1765,16 +1760,16 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-info-card-code-sample-copy-chunk">&lt;div class="basic-card pad-b content-fill"&gt;
+              <code><pre id="card-info-card-code-sample-copy-chunk">&lt;div class="basic-card content-fill"&gt;
   &lt;a class="basic-card-link link-box" href="#">
     &lt;div class="grid">
-      &lt;div class="unit [ xs-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
+      &lt;div class="unit [ xs-1 ] ">
         &lt;img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
       &lt;/div>
       &lt;div class="unit [ xs-1 ] ">
         &lt;div class="text-info pad-t gutter">
-          &lt;h3 class="peta push-0 info-card-title bold">New Release&lt;/h3>
-          &lt;p class="push-1-2 kilo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&lt;/p>
+          &lt;h3 class="peta push-1-4 info-card-title bold">New Release&lt;/h3>
+          &lt;p class="push-1-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&lt;/p>
         &lt;/div>
       &lt;/div>
     &lt;/div>
@@ -1845,8 +1840,8 @@
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="image-of-our-different-variety-of-rubik-product">
   &lt;/div>
   &lt;div class="unit [ xs-1 s-2-3 m-3-4 l-3-4] gutter">
-    &lt;h3 class="h3-separator pad-b-1-2">NEW Releases&lt;/h3>
-    &lt;p class="push-1-2">$$$$&lt;/p>
+    &lt;h3 class="h3-separator push-1-2">NEW Releases&lt;/h3>
+    &lt;span class="push-1-2 block push">$$$$&lt;/span>
     &lt;a class="btn btn-small">&lt;span aria-label="More">More&lt;i>&lt;/i>&lt;/span>&lt;/a>
     &lt;a class="btn btn-small btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
