--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -15,14 +15,14 @@
 </head>
 <body>
 
-  <div class="grid cart-item main-card gutter-1-2 pad-t pad-b content-fill">
+  <div class="grid cart-item main-card content-fill pad-b-1-2">
     <div class="unit [ xs-1 ] push">
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
-    <div class="unit [ xs-1 ] island">
+    <div class="unit [ xs-1 ] gutter">
       <h3 class="push-0 bold">Item Name</h3>
       <span class="push">$$$$</span>
-      <p class="pad-t-1-4 push-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <a class="btn btn-save"><span aria-label="Save">Save<i></i></span></a>
       <a class="btn btn-cart push-r-2"><span aria-label="Cart">Cart<i></i></span></a>
     </div>
