--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -15,16 +15,16 @@
 </head>
 <body>
 
-  <div class="basic-card pad-b content-fill">
+  <div class="basic-card content-fill">
     <a class="basic-card-link link-box" href="#">
       <div class="grid">
-        <div class="unit [ xs-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
+        <div class="unit [ xs-1 ] ">
           <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
         </div>
         <div class="unit [ xs-1 ] ">
           <div class="text-info pad-t gutter">
-            <h3 class="peta push-0 info-card-title bold">New Release</h3>
-            <p class="push-1-2 kilo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            <h3 class="peta push-1-4 info-card-title bold">New Release</h3>
+            <p class="push-1-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
           </div>
         </div>
       </div>
